...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dkV-WF-pmm">
                                <rect key="frame" x="20" y="189" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YBF-7G-tiz">
                                <rect key="frame" x="20" y="227" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="270" y="321" width="61" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Sign in"/>
                                <connections>
                                    <action selector="signInAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="UIo-WP-VKo"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nac-7r-net">
                                <rect key="frame" x="248" y="365" width="105" height="30"/>
                                <state key="normal" title="Create account"/>
                                <connections>
                                    <segue destination="YoL-Ya-4ey" kind="show" id="OGI-LZ-7xx"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUp-zf-arw">
                                <rect key="frame" x="20" y="187" width="100" height="20"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FPz-mF-Ym2">
                                <rect key="frame" x="20" y="227" width="100" height="21"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Save changes"/>
                                <connections>
                                    <action selector="saveChanges:" destination="oBJ-cn-4ug" eventType="touchUpInside" id="8wK-E0-yNw"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Details" id="fdZ-8g-iok">
                        <barButtonItem key="rightBarButtonItem" title="Leave" id="GOO-gw-nn9">
                            <connections>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password again" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Toe-2D-IMm">
                                <rect key="frame" x="20" y="339" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Register" id="bpD-a3-VAw">
                        <barButtonItem key="rightBarButtonItem" title="Register" id="jo1-Wy-pYd">
                            <connections>
...
