...
    
public class func localizedString(string : String) ->String {
    return NSLocalizedString(string, comment: "")
}

public static let kStr_AttachmentFile = CKStrings.localizedString("Attachment file")
public static let kStr_AttachmentLocation = CKStrings.localizedString("Attachment location")
public static let kStr_AddContact = CKStrings.localizedString("Add a contact")

public static let kStr_Cancel = CKStrings.localizedString("Cancel")
public static let kStr_Close = CKStrings.localizedString("Close")
public static let kStr_CouldntLogin = CKStrings.localizedString("Couldn't log in")
public static let kStr_CouldntRegisterTitle = CKStrings.localizedString("Couldn't register")
...
public static let kStr_EnterPasswordAndVerify = CKStrings.localizedString("Please enter your password and verify your password again")
public static let kStr_EnterPasswordLength = CKStrings.localizedString("Please enter at least 6 characters")
public static let kStr_Events = CKStrings.localizedString("Events")

public static let kStr_Group = CKStrings.localizedString("Group")

public static let kStr_Subscribers = CKStrings.localizedString("In Group")

public static let kStr_Leave = CKStrings.localizedString("Leave")

public static let kStr_MediaMessages = CKStrings.localizedString("Media Messages")

public static let kStr_No = CKStrings.localizedString("No")
...
