...
    
    override func viewWillAppear(animated: Bool) {
        super.viewWillAppear(animated)
        
        if let tabBarVC = self.tabBarController {
            tabBarVC.navigationItem.title = myChatChannel?.name
            tabBarVC.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Send", style: .Plain, target: self, action: Selector("sendMessage:"))
            //disabled if no permissions
            tabBarVC.navigationItem.rightBarButtonItem?.enabled = myChatChannel!.canPublish
        }
    }

}
...
